exports[`Bankers Table display component rendering Renders as expected (compared to a snapshot) 3 diners, none paying 1`] = `
<div
  className="BankersTable">
  <div
    className="place"
    style={
      Object {
        "transform": "translate(0rem, -120px) rotate(180deg)",
      }
    }>
    <div
      className="place-setting">
      <div
        style={
          Object {
            "transform": "rotate(-180deg)",
          }
        }>
        me
      </div>
    </div>
  </div>
  <div
    className="place"
    style={
      Object {
        "transform": "translate(85px, -85px) rotate(225deg)",
      }
    }>
    <div
      className="place-setting">
      <div
        style={
          Object {
            "transform": "rotate(-225deg)",
          }
        }>
        
      </div>
    </div>
  </div>
  <div
    className="place"
    style={
      Object {
        "transform": "translate(120px, 0px) rotate(270deg)",
      }
    }>
    <div
      className="place-setting">
      <div
        style={
          Object {
            "transform": "rotate(-270deg)",
          }
        }>
        Bob
      </div>
    </div>
  </div>
  <div
    className="place"
    style={
      Object {
        "transform": "translate(85px, 85px) rotate(315deg)",
      }
    }>
    <div
      className="place-setting">
      <div
        style={
          Object {
            "transform": "rotate(-315deg)",
          }
        }>
        
      </div>
    </div>
  </div>
  <div
    className="place"
    style={
      Object {
        "transform": "translate(0px, 120px) rotate(0deg)",
      }
    }>
    <div
      className="place-setting">
      <div
        style={
          Object {
            "transform": "rotate(-0deg)",
          }
        }>
        Alice
      </div>
    </div>
  </div>
  <div
    className="place"
    style={
      Object {
        "transform": "translate(-85px, 85px) rotate(45deg)",
      }
    }>
    <div
      className="place-setting">
      <div
        style={
          Object {
            "transform": "rotate(-45deg)",
          }
        }>
        
      </div>
    </div>
  </div>
  <div
    className="place"
    style={
      Object {
        "transform": "translate(-120px, 0px) rotate(90deg)",
      }
    }>
    <div
      className="place-setting">
      <div
        style={
          Object {
            "transform": "rotate(-90deg)",
          }
        }>
        
      </div>
    </div>
  </div>
  <div
    className="place"
    style={
      Object {
        "transform": "translate(-85px, -85px) rotate(135deg)",
      }
    }>
    <div
      className="place-setting">
      <div
        style={
          Object {
            "transform": "rotate(-135deg)",
          }
        }>
        
      </div>
    </div>
  </div>
</div>
`;

exports[`Bankers Table display component rendering Renders as expected (compared to a snapshot) 5 diners, 1 paying 1`] = `
<div
  className="BankersTable">
  <div
    className="place"
    style={
      Object {
        "transform": "translate(0rem, -120px) rotate(180deg)",
      }
    }>
    <div
      className="place-setting">
      <div
        style={
          Object {
            "transform": "rotate(-180deg)",
          }
        }>
        me
      </div>
    </div>
  </div>
  <div
    className="place paying"
    style={
      Object {
        "transform": "translate(85px, -85px) rotate(225deg)",
      }
    }>
    <div
      className="place-setting">
      <div
        style={
          Object {
            "transform": "rotate(-225deg)",
          }
        }>
        Rich
      </div>
    </div>
  </div>
  <div
    className="place"
    style={
      Object {
        "transform": "translate(120px, 0px) rotate(270deg)",
      }
    }>
    <div
      className="place-setting">
      <div
        style={
          Object {
            "transform": "rotate(-270deg)",
          }
        }>
        Bob
      </div>
    </div>
  </div>
  <div
    className="place"
    style={
      Object {
        "transform": "translate(85px, 85px) rotate(315deg)",
      }
    }>
    <div
      className="place-setting">
      <div
        style={
          Object {
            "transform": "rotate(-315deg)",
          }
        }>
        
      </div>
    </div>
  </div>
  <div
    className="place"
    style={
      Object {
        "transform": "translate(0px, 120px) rotate(0deg)",
      }
    }>
    <div
      className="place-setting">
      <div
        style={
          Object {
            "transform": "rotate(-0deg)",
          }
        }>
        Alice
      </div>
    </div>
  </div>
  <div
    className="place"
    style={
      Object {
        "transform": "translate(-85px, 85px) rotate(45deg)",
      }
    }>
    <div
      className="place-setting">
      <div
        style={
          Object {
            "transform": "rotate(-45deg)",
          }
        }>
        
      </div>
    </div>
  </div>
  <div
    className="place"
    style={
      Object {
        "transform": "translate(-120px, 0px) rotate(90deg)",
      }
    }>
    <div
      className="place-setting">
      <div
        style={
          Object {
            "transform": "rotate(-90deg)",
          }
        }>
        Mal
      </div>
    </div>
  </div>
  <div
    className="place"
    style={
      Object {
        "transform": "translate(-85px, -85px) rotate(135deg)",
      }
    }>
    <div
      className="place-setting">
      <div
        style={
          Object {
            "transform": "rotate(-135deg)",
          }
        }>
        
      </div>
    </div>
  </div>
</div>
`;
